--- a/config.yml
+++ b/config.yml
@@ -39,7 +39,7 @@ menu:
       weight: 20
 
     - identifier: contact
-      name: Contact
+      name: Get in touch!
       url: /contact/
       weight: 30
 
