--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 baseURL: "https://www.oso.nz"
 languageCode: en-us
-title: Curtis Fairweather - OSO Marketing NZ
+title: Curtis Fairweather - OSO NZ
 theme: PaperMod
 
 params:
