--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ params:
 
   homeInfoParams:
       Title: G'day! I'm Curtis, welcome to my website.
-      Content: Feel free to stick around and read about the projects I'm working on, or check out my latest learns documented in the blog. 
+      Content: Feel free to stick around and read about the projects I'm working on, or check out my wiki documenting my latest learns. 
       
   socialIcons:
   Name: facebook
