--- a/config.yml
+++ b/config.yml
@@ -6,8 +6,8 @@ theme: PaperMod
 params:
 
   homeInfoParams:
-      Title: G'day! I'm Curtis, welcome to my website.
-      Content: Feel free to stick around and read about the projects I'm working on, or check out my wiki documenting my latest learns. 
+      Title: G'day! I'm Curtis, welcome to my website. I know it's not pretty, but pretty doesn't get results.
+      Content: I’m a Christchurch based SaaS CMO, Marketing Freelancer and PhD candidate at UC. Want me to fill your sales pipeline? Get in touch. Otherwise feel free to stick around, check out the projects I’m working on and read the learns I’ve documented in my wiki. 
       
   socialIcons:
   Name: facebook
