--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ params:
 
   homeInfoParams:
       Title: G'day! I'm Curtis, welcome to my website. I know it's not pretty, but pretty doesn't get results.
-      Content: I’m a Christchurch based SaaS CMO, Marketing Freelancer and PhD candidate at UC. Want me to fill your sales pipeline? Get in touch. Otherwise feel free to stick around, check out the projects I’m working on and read the learns I’ve documented in my wiki. 
+      Content: I’m a Christchurch based SaaS CMO, Marketing Freelancer and about to be a PhD candidate at UC. Want me to fill your sales pipeline? Get in touch. Otherwise feel free to stick around, check out the projects I’m working on and read the learns I’ve documented in my wiki. 
       
   socialIcons:
   Name: facebook
